# xrphoton

./: .gitignore  ACCELERATION_STRUCTURE_PLAN.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  FORMATS.md  GALLERY_PLAN.md  GEOMETRY_PLAN.md  LIGHTING_PLAN.md  PLAN-camera-push-constants.md  PLAN-frames-in-flight.md  README.md  RT_PIPELINE_PLAN.md  SDK.md
build-ninja/: .ninja_deps  .ninja_log  build.ninja
docs/: file-split-plan.md
shaders/: raytrace.slang  triangle.slang
src/: acceleration_structure.cpp  acceleration_structure.hpp  blender_mesh.cpp  blender_mesh.hpp  camera.cpp  camera.hpp  gallery.cpp  gallery.hpp  gpu_scene.cpp  gpu_scene.hpp  legacy_ogf.cpp  legacy_ogf.hpp  legacy_ogf_rigid.cpp  lighting.cpp  lighting.hpp  main.cpp  ogfx.cpp  ogfx.hpp  ogfx_decoder.cpp  ogfx_detail.hpp  ogfx_loader.cpp  ogfx_loader.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  ray_types.hpp  renderer.cpp  renderer.hpp  rt_pipeline.cpp  rt_pipeline.hpp  scene.cpp  scene.hpp  scene_assembly.cpp  scene_assembly.hpp  scene_assembly_detail.hpp  swapchain.cpp  swapchain.hpp  texture_loader.cpp  texture_loader.hpp  (+5 more)
tests/: alpha_ogf_offline_proof.cmake  blender_cli_test.cmake  blender_mesh_tests.cpp  blender_offline_proof.cmake  custom_barrel_offline_proof.cmake  gallery_tests.cpp  legacy_ogf_cli_test.cmake  legacy_ogf_tests.cpp  lighting_tests.cpp  m4a_offline_proof.cmake  ogfx_decoder_tests.cpp  ogfx_loader_tests.cpp  ogfx_tests.cpp  physics_test_access.hpp  physics_tests.cpp  player_tests.cpp  remade_barrel_offline_proof.cmake  rigid_ogf_offline_proof.cmake  scene_assembly_tests.cpp  texture_loader_tests.cpp
tools/: asset_compiler.cpp  compile_probe_assets.cpp  compile_test_quad.cpp  convert_ogf.cpp
tools/blender/: export_ogfx.py
